<resources>
    <string name="app_name">Umbrella</string>
    <string name="feed_title">Feed</string>
    <string name="form_title">Forms</string>
    <string name="checklist_title">Checklists</string>
    <string name="lesson_title">Lessons</string>
    <string name="account_title">Account</string>
    <string name="message_title_active_forms">Filled out forms</string>
    <string name="message_title_all_forms">Available forms</string>
    <string name="message_body_form_new">NEW</string>
    <string name="form_input_controller_name">Digital Security Incident</string>
    <string name="terms_conditions">Terms and Conditions</string>
    <string name="tour_slide_1_text">Umbrella makes your security simple</string>
    <string name="tour_slide_2_text">Get advice on everything from sending a secure email to safe travel</string>
    <string name="tour_slide_3_text">Use checklists to mark your progress</string>
    <string name="tour_slide_4_text">Stay up to date with the latest information on where you are</string>

    <string name="tour_view_accept_button">ACCEPT</string>
    <string name="fab_dialog_transition_name">transition.fab</string>
    <string name="loading_tour_message">Fetching data…</string>
    <string name="error_connection_tour_message">Looks like the server is taking to long to respond, try again later.</string>

</resources>
